<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- application -->
    <string name="app_name">Shortie</string>

    <!-- input -->
    <string name="et_longurl_hint">Enter long URL here</string>
    <string name="b_shorten">Shorten</string>
    <string name="et_search_hint">Search</string>
    <string name="desc_search">Search</string>

    <!-- empty list -->
    <string name="tvEmptyTitle">No Saved Links</string>
    <string name="tvEmptyExplanation">To get started, convert some links.</string>

    <!-- listview -->
    <string name="tvLinkLongUrl">[Expanded URL here]</string>
    <string name="tvLinkShortUrl">[Short URL here]</string>
    <string name="tvLinkDate">[Date here]</string>
    
    <!-- actions (menu bar) -->
    <string name="action_prefs">Preferences</string>
    <string name="action_info">Info</string>
    <string name="action_input">Input</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_search">Search</string>
    
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    
    <!-- Spinners -->
    <string name="prompt_shorteners">Select a Shortener</string>
    <string-array name="array_shorts_no_default">
        <item>Google</item>
        <item>Google</item>
        <item>Google</item>
        <item>Google</item>
    </string-array>

</resources>