<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:shortie="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_prefs"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_prefs"
        shortie:showAsAction="always"
    />
    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_edit"
        shortie:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        shortie:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_delete"
        shortie:showAsAction="never"
    />
</menu>
