<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/tvLinkLongUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2sp"
        android:paddingRight="20sp"
        android:textSize="18sp"
        android:text="@string/tvLinkLongUrl"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/tvLinkShortUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/tvLinkShortUrl"/>
        <TextView
            android:id="@+id/tvLinkDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:text="@string/tvLinkDate"/>
    </LinearLayout>
    

</LinearLayout>
